--- a/index.html
+++ b/index.html
@@ -766,7 +766,8 @@
       <div class="footer-content">
         <div class="footer-left">
           <span class="copyright-text">© 2025 ytplanner.in</span>
-          <span class="tagline-text">Free by heart. Funded by ads. Built for learners.</span>
+          <!-- <span class="tagline-text">Free by heart. Funded by ads. Built for learners.</span> -->
+          <span class="tagline-text">Made by sbhm_prksh</span>
         </div>
         <div class="footer-links">
           <a href="#">Privacy</a>
