--- a/index.html
+++ b/index.html
@@ -767,7 +767,9 @@
         <div class="footer-left">
           <span class="copyright-text">© 2025 ytplanner.in</span>
           <!-- <span class="tagline-text">Free by heart. Funded by ads. Built for learners.</span> -->
-          <span class="tagline-text">Made by sbhm_prksh</span>
+        </div>
+        <div>
+          <span class="tagline-text">Made by Shubham Prakash</span>
         </div>
         <div class="footer-links">
           <a href="#">Privacy</a>
