SEO tags add, Stylsheet Seperate, OG preview image add

--- a/index.html
+++ b/index.html
@@ -6,610 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>YT Planner</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    :root {
-      --red: #ff3333;
-      --red-light: #ff5555;
-      --bg: #0a0a0a;
-      --bg-card: #111;
-      --text: #fff;
-      --text-dim: #999;
-      --border: #333;
-    }
-
-    body {
-      background: var(--bg);
-      color: var(--text);
-      font-family: 'Inter', sans-serif;
-      line-height: 1.6;
-      overflow-x: hidden;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
-
-    /* Header */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(10, 10, 10, 0.95);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid var(--border);
-      z-index: 1000;
-    }
-
-    .header-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 0;
-    }
-
-    .logo {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: var(--red);
-      text-decoration: none;
-    }
-
-    .status-badge {
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      font-size: 0.8rem;
-      color: var(--text-dim);
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .pulse {
-      width: 8px;
-      height: 8px;
-      background: var(--red);
-      border-radius: 50%;
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-
-      0%,
-      100% {
-        opacity: 1;
-      }
-
-      50% {
-        opacity: 0.3;
-      }
-    }
-
-    /* Hero Section */
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      padding: 6rem 0 2rem;
-    }
-
-    .hero-content {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 4rem;
-      align-items: center;
-    }
-
-    .hero-text h1 {
-      font-size: clamp(2.5rem, 5vw, 4rem);
-      font-weight: 800;
-      line-height: 1.3;
-      margin-bottom: 1.5rem;
-      /* letter-spacing: -0.02em; */
-    }
-
-    .highlight {
-      color: var(--red);
-    }
-
-    .hero-text p {
-      font-size: clamp(1.1rem, 2vw, 1.3rem);
-      color: var(--text-dim);
-      margin-bottom: 2rem;
-      max-width: 500px;
-    }
-
-    .stats {
-      display: flex;
-      gap: 2rem;
-      margin-bottom: 2rem;
-    }
-
-    .stat {
-      text-align: center;
-    }
-
-    .stat-number {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: var(--red);
-      display: block;
-    }
-
-    .stat-label {
-      font-size: 0.8rem;
-      color: var(--text-dim);
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-    }
-
-    /* Demo Interface */
-    .demo-interface {
-      background: var(--bg-card);
-      border: 2px solid var(--border);
-      border-radius: 16px;
-      padding: 2rem;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .demo-interface::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: 2;
-    }
-
-    .demo-content {
-      position: relative;
-      z-index: 1;
-      filter: blur(0.5px);
-    }
-
-    .demo-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: 1.5rem;
-      color: var(--text);
-    }
-
-    .demo-input {
-      width: 100%;
-      background: #0a0a0a;
-      border: 2px solid var(--border);
-      border-radius: 12px;
-      padding: 1rem;
-      color: var(--text);
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
-      font-family: 'Inter', sans-serif;
-    }
-
-    .demo-input::placeholder {
-      color: var(--text-dim);
-    }
-
-    .mode-selector {
-      display: flex;
-      gap: 0.5rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .mode-option {
-      flex: 1;
-      background: #0a0a0a;
-      border: 2px solid var(--border);
-      border-radius: 8px;
-      padding: 0.8rem;
-      text-align: center;
-      font-size: 0.8rem;
-      color: var(--text);
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    .mode-option.active {
-      border-color: var(--red);
-      background: rgba(255, 51, 51, 0.1);
-    }
-
-    .mode-input {
-      width: 100%;
-      background: #0a0a0a;
-      border: 2px solid var(--border);
-      border-radius: 8px;
-      padding: 0.8rem;
-      color: var(--text);
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
-      font-family: 'Inter', sans-serif;
-    }
-
-    .demo-button {
-      width: 100%;
-      background: var(--red);
-      color: white;
-      border: none;
-      border-radius: 12px;
-      padding: 1rem;
-      font-size: 1rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    .demo-button:hover {
-      background: var(--red-light);
-    }
-
-    .launching-overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.9);
-      border: 2px solid var(--red);
-      border-radius: 12px;
-      padding: 2rem;
-      text-align: center;
-      z-index: 10;
-    }
-
-    .launching-text {
-      font-size: 1.2rem;
-      font-weight: 700;
-      color: var(--red);
-      margin-bottom: 0.5rem;
-    }
-
-    .launching-sub {
-      font-size: 0.9rem;
-      color: var(--text-dim);
-    }
-
-    /* Features Section */
-    .features {
-      padding: 4rem 0;
-      background: var(--bg-card);
-    }
-
-    .features h2 {
-      text-align: center;
-      font-size: clamp(2rem, 4vw, 3rem);
-      font-weight: 700;
-      margin-bottom: 3rem;
-    }
-
-    .features-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .feature-card {
-      background: var(--bg);
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
-      transition: all 0.3s ease;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .feature-card:hover {
-      border-color: var(--red);
-      transform: translateY(-2px);
-    }
-
-    .feature-icon {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      display: block;
-    }
-
-    .feature-title {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: 0.5rem;
-      color: var(--text);
-    }
-
-    .feature-desc {
-      color: var(--text-dim);
-      font-size: 0.9rem;
-      line-height: 1.5;
-      text-align: center;
-    }
-
-    /* Problem Section */
-    .problem {
-      padding: 4rem 0;
-      text-align: center;
-    }
-
-    .problem h2 {
-      font-size: clamp(2rem, 4vw, 3rem);
-      font-weight: 700;
-      margin-bottom: 2rem;
-    }
-
-    .problem-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      margin-top: 3rem;
-    }
-
-    .problem-item {
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 2rem;
-    }
-
-    .problem-emoji {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      display: block;
-    }
-
-    .problem-text {
-      font-size: 1.1rem;
-      color: var(--text-dim);
-    }
-
-    /* Solution Section */
-    .solution {
-      padding: 4rem 0;
-      background: var(--bg-card);
-    }
-
-    .solution-content {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 4rem;
-      align-items: center;
-    }
-
-    .solution h2 {
-      font-size: clamp(2rem, 4vw, 3rem);
-      font-weight: 700;
-      margin-bottom: 2rem;
-    }
-
-    .solution-steps {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-    }
-
-    .step {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    .step-number {
-      width: 40px;
-      height: 40px;
-      background: var(--red);
-      color: white;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 600;
-      font-size: 1.1rem;
-    }
-
-    .step-text {
-      font-size: 1.1rem;
-      color: var(--text-dim);
-    }
-
-    /* CTA Section */
-    .cta {
-      padding: 4rem 0;
-      text-align: center;
-    }
-
-    .cta h2 {
-      font-size: clamp(2rem, 4vw, 3rem);
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-
-    .cta p {
-      font-size: 1.2rem;
-      color: var(--text-dim);
-      margin-bottom: 2rem;
-    }
-
-    .notify-form {
-      max-width: 400px;
-      margin: 0 auto;
-      display: flex;
-      gap: 1rem;
-      background: var(--bg-card);
-      border: 2px solid var(--border);
-      border-radius: 50px;
-      padding: 0.5rem;
-    }
-
-    .notify-input {
-      flex: 1;
-      background: none;
-      border: none;
-      color: var(--text);
-      font-size: 1rem;
-      padding: 1rem 1.5rem;
-      outline: none;
-    }
-
-    .notify-input::placeholder {
-      color: var(--text-dim);
-    }
-
-    .notify-button {
-      background: var(--red);
-      color: white;
-      border: none;
-      border-radius: 40px;
-      padding: 1rem 2rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      white-space: nowrap;
-    }
-
-    .notify-button:hover {
-      background: var(--red-light);
-    }
-
-    /* Footer */
-    footer {
-      background: var(--bg-card);
-      border-top: 1px solid var(--border);
-      padding: 2rem 0;
-      text-align: center;
-      /* Default for smaller screens */
-      color: var(--text-dim);
-    }
-
-    .footer-content {
-      display: flex;
-      flex-direction: column;
-      /* Stacked by default on smaller screens */
-      justify-content: center;
-      /* Center content when stacked */
-      align-items: center;
-      /* Center items when stacked */
-      gap: 1rem;
-    }
-
-    .footer-left {
-      display: flex;
-      flex-direction: column;
-      /* Stack these elements by default */
-      align-items: center;
-      /* Center them when stacked */
-      gap: 0.5rem;
-      /* Space between copyright and tagline */
-    }
-
-    .tagline-text {
-      text-align: center;
-      /* Ensure tagline text is centered on small screens */
-    }
-
-    .footer-links {
-      display: flex;
-      gap: 2rem;
-      /* On small screens, this will naturally be below footer-left due to flex-direction: column on footer-content */
-    }
-
-    /* Responsive Design */
-    @media (min-width: 769px) {
-
-      /* Use min-width for desktop-first approach */
-      .footer-content {
-        flex-direction: row;
-        /* Row direction for larger screens */
-        justify-content: space-between;
-        /* Space out items */
-        align-items: center;
-        /* Align items vertically */
-      }
-
-      .footer-left {
-        flex-direction: row;
-        /* Align copyright and tagline in a row */
-        align-items: center;
-        /* Vertically align them */
-        gap: 1.5rem;
-        /* Adjust space between copyright and tagline on larger screens */
-      }
-
-      .tagline-text {
-        text-align: left;
-        /* Align tagline to the left within its container */
-      }
-    }
-
-    @media (max-width: 768px) {
-      .hero-content {
-        grid-template-columns: 1fr;
-        gap: 2rem;
-        text-align: center;
-      }
-
-      .solution-content {
-        grid-template-columns: 1fr;
-        gap: 2rem;
-      }
-
-      .stats {
-        justify-content: center;
-      }
-
-      .notify-form {
-        flex-direction: column;
-        border-radius: 16px;
-        padding: 1rem;
-      }
-
-      .notify-input {
-        text-align: center;
-      }
-
-      .notify-button {
-        border-radius: 12px;
-      }
-
-      .mode-selector {
-        flex-direction: column;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        padding: 0 0.5rem;
-      }
-
-      .hero {
-        padding: 7rem 0.1rem 1rem 0.1rem;
-      }
-
-      .demo-interface {
-        padding: 1rem;
-      }
-
-      .launching-overlay {
-        padding: 1rem;
-      }
-
-      .features,
-      .problem,
-      .solution,
-      .cta {
-        padding: 2rem 0;
-      }
-    }
-  </style>
+  <!-- Basic SEO -->
+  <meta name="title" content="YTPlanner – Smart Study Plans from YouTube Playlists">
+  <meta name="description"
+    content="YTPlanner helps students turn long YouTube playlists into daily study plans. Exam in 10 days? 150 videos? We’ve got you.">
+
+  <meta name="keywords"
+    content="study planner, YouTube playlist planner, exam prep, student tools, youtube study, yt planner, ytplaylist, learning tool, playlist analyze, analyze, youtube, productive, planning">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ytplanner.in/">
+  <meta property="og:title" content="YTPlanner – Smart Study Plans from YouTube Playlists">
+  <meta property="og:description"
+    content="We turn YouTube playlists into personalized study schedules. Free. Fast. Built for learners.">
+  <meta property="og:image" content="https://ytplanner.in/logo_og.png"> 
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://ytplanner.in/">
+  <meta property="twitter:title" content="YTPlanner – Smart Study Plans from YouTube Playlists">
+  <meta property="twitter:description"
+    content="Plan your YouTube playlist smartly before exams. No more video overload. Just focus.">
+  <meta property="twitter:image" content="https://ytplanner.in/logo_og.png">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://ytplanner.in/">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
