Fix whatsapp sharing OG image to burst cache

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <meta property="og:title" content="YTPlanner – Smart Study Plans from YouTube Playlists">
   <meta property="og:description"
     content="We turn YouTube playlists into personalized study schedules. Free. Fast. Built for learners.">
-  <meta property="og:image" content="https://ytplanner.in/logo_og.png"> 
+  <meta property="og:image" content="https://ytplanner.in/logo_og.png">
+  <meta property="og:image" content="https://ytplanner.in/logo_og.png?v=1">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
