--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
   <link rel="canonical" href="https://ytplanner.in/">
   <link rel="stylesheet" href="style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NH0ZTW6LJT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-NH0ZTW6LJT');
+</script>
 
 <body>
   <header>
