--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <meta property="og:description"
     content="We turn YouTube playlists into personalized study schedules. Free. Fast. Built for learners.">
   <meta property="og:image" content="https://ytplanner.in/logo_og.png">
-  <meta property="og:image" content="https://ytplanner.in/logo_og.png?v=1">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -37,7 +36,13 @@
 
   <!-- Canonical -->
   <link rel="canonical" href="https://ytplanner.in/">
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+
+
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NH0ZTW6LJT"></script>
