Update Open graph image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:title" content="YTPlanner – Smart Study Plans from YouTube Playlists">
   <meta property="og:description"
     content="We turn YouTube playlists into personalized study schedules. Free. Fast. Built for learners.">
-  <meta property="og:image" content="https://ytplanner.in/logo_og.png">
+  <meta property="og:image" content="https://ytplanner.in/og.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -32,7 +32,7 @@
   <meta property="twitter:title" content="YTPlanner – Smart Study Plans from YouTube Playlists">
   <meta property="twitter:description"
     content="Plan your YouTube playlist smartly before exams. No more video overload. Just focus.">
-  <meta property="twitter:image" content="https://ytplanner.in/logo_og.png">
+  <meta property="twitter:image" content="https://ytplanner.in/og.png">
 
   <!-- Canonical -->
   <link rel="canonical" href="https://ytplanner.in/">
