Add logo in header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
   <header>
     <div class="container">
       <div class="header-content">
-        <a href="#" class="logo">YT Planner</a>
+        <div class="logo">
+          <div class="logoImage">
+            <img src="circular_logo.png" alt="">
+          </div>
+          <a href="#" class="logoTitle">ytplanner</a>
+        </div>
         <div class="status-badge">
           <div class="pulse"></div>
           Launching Soon
